[package]
name = "alar2"
version = "0.9.0"
authors = ["malachma <malachma@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sys-mount = "1.2.1"
cmd_lib = "0.8.5"
fs_extra = "1.2.0"
clap = "2.33.3"
copy_dir = "0.1.2"
