[package]
name = "alar2"
version = "0.3.1"
authors = ["malachma <malachma@microsoft.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sys-mount = "1.3.0"
cmd_lib = "1.3.0"
fs_extra = "1.2.0"
clap = "2.33.3"
uapi = "0.2"
